adjusted width from 400px to 300px to fix alignment

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body{
 }
 .container {
     background-color: white;
-    width: 400px;
+    width: 300px;
     margin: 200px auto;
     border: 5px solid #b74343;
     padding: 20px;
